--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
-    "graphql": "^16.7.1"
+    "graphql": "^16.7.1",
+    "lodash": "^4.17.21"
   }
 }
